ver1.2 1. ver1.1의 MainFragment 수정내용을 SearchFragment에도 적용

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -27,6 +27,12 @@
             android:textSize="30dp" />
 
         <TextView
+            android:id="@+id/tvFSAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center" />
+
+        <TextView
             android:id="@+id/tvError"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
