--- a/app/src/main/res/layout/list_chatroom_item.xml
+++ b/app/src/main/res/layout/list_chatroom_item.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
+        android:background="@drawable/drawable_round_rectangle_stroke_solid"
         android:orientation="horizontal">
 
         <TextView
@@ -85,6 +86,7 @@
         android:id="@+id/view9"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="#E6E6E6" />
+        android:background="#E6E6E6"
+        android:visibility="invisible" />
 
 </LinearLayout>
