--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toTopOf="@+id/constraintLayout6">
 
         <ImageView
-            android:id="@+id/imageView48"
+            android:id="@+id/ivAPEEditProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -124,6 +124,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="이름"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@+id/etAPEUserId"
         app:layout_constraintStart_toStartOf="@+id/etAPEUserId"
@@ -143,6 +144,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="전화번호"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@+id/etAPEUserName"
         app:layout_constraintStart_toStartOf="@+id/textView100"
@@ -174,6 +176,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:ems="10"
+        android:hint="상세주소"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="@+id/etAPEUserAddress1"
         app:layout_constraintStart_toStartOf="@+id/etAPEUserAddress1"
@@ -225,5 +228,16 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvAPEDocumentId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/cvAPECardView"
+        app:layout_constraintEnd_toStartOf="@+id/cvAPECardView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/cvAPECardView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
