--- a/app/src/main/res/layout/list_reply_item.xml
+++ b/app/src/main/res/layout/list_reply_item.xml
@@ -24,27 +24,34 @@
             android:layout_gravity="center"
             android:padding="5dp">
 
-            <ImageView
-                android:id="@+id/ivLRIProfile"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cvAPECardView"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="5dp"
-                android:layout_marginStart="5dp"
-                android:background="@drawable/drawable_circle2"
-                android:padding="10dp"
-                android:src="@drawable/ic_launcher_background"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="10dp"
+                app:cardCornerRadius="75dp"
+                app:cardElevation="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/ivLRIProfile"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/default_profile_icon" />
+            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:id="@+id/linearLayout9"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="20dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/ivLRIProfile"
+                app:layout_constraintStart_toEndOf="@+id/cvAPECardView"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <LinearLayout
@@ -77,7 +84,7 @@
 
                 <TextView
                     android:id="@+id/tvLRIContent"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="댓글내용"
                     android:textSize="14dp" />
