--- a/app/src/main/res/layout/fragment_community_board_read.xml
+++ b/app/src/main/res/layout/fragment_community_board_read.xml
@@ -18,6 +18,26 @@
 
         <!-- CardView -->
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvAPECardView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="75dp"
+            app:cardElevation="4dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/ivFCBRWriterPhoto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/default_profile_icon" />
+        </androidx.cardview.widget.CardView>
+
         <ImageView
             android:id="@+id/ivFCBRNoImg"
             android:layout_width="0dp"
@@ -37,7 +57,7 @@
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView52" />
+            app:layout_constraintTop_toBottomOf="@+id/cvAPECardView" />
 
         <View
             android:id="@+id/viewFadingEdge2"
@@ -88,13 +108,12 @@
             android:id="@+id/tvFCBRUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginStart="5dp"
             android:text="asdasdasd"
+            android:textColor="#898989"
             android:textSize="14dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/imageView52"
-            app:layout_constraintTop_toTopOf="@+id/imageView52" />
+            app:layout_constraintBottom_toBottomOf="@+id/tvFCBWriterName"
+            app:layout_constraintStart_toEndOf="@+id/tvFCBWriterName" />
 
         <!-- 뒤로 가기 버튼 -->
         <ImageButton
@@ -111,17 +130,6 @@
         <!-- 뷰 구분선 -->
 
         <!-- 프로필 이미지 -->
-        <ImageView
-            android:id="@+id/imageView52"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/drawable_circle2"
-            android:padding="5dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/profile" />
 
         <!-- 본문 내용 -->
         <TextView
@@ -130,8 +138,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="@string/sample_message"
-            android:textSize="12dp"
-            app:layout_constraintStart_toStartOf="@+id/imageView52"
+            android:textSize="16dp"
+            app:layout_constraintStart_toStartOf="@+id/ibFCBRThumbsUp"
             app:layout_constraintTop_toBottomOf="@+id/ibFCBRThumbsUp" />
 
         <!-- 좋아요 버튼 -->
@@ -142,7 +150,7 @@
             android:background="#00ff0000"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
-            app:layout_constraintStart_toStartOf="@+id/imageView52"
+            app:layout_constraintStart_toStartOf="@+id/cvAPECardView"
             app:layout_constraintTop_toTopOf="@+id/imageButton3"
             app:srcCompat="@drawable/heart" />
 
@@ -224,11 +232,10 @@
             android:id="@+id/tvFCBRDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
             android:text="2023.09.03 11:00"
             android:textSize="14dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView52"
-            app:layout_constraintStart_toStartOf="@+id/tvFCBRUser" />
+            app:layout_constraintStart_toStartOf="@+id/tvFCBWriterName"
+            app:layout_constraintTop_toBottomOf="@+id/tvFCBWriterName" />
 
         <LinearLayout
             android:id="@+id/linearLayout8"
@@ -321,6 +328,17 @@
             android:background="#C2C2C2"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="3dp" />
+
+        <TextView
+            android:id="@+id/tvFCBWriterName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:text="TextView"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/cvAPECardView"
+            app:layout_constraintTop_toTopOf="@+id/cvAPECardView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
