--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -38,11 +38,21 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tvLIUserName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="유저이름"
+                    android:textStyle="bold" />
+
+                <TextView
                     android:id="@+id/tvLIUser"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
                     android:text="유저아이디"
-                    android:textColor="#CBC8C8" />
+                    android:textColor="#CBC8C8"
+                    android:textSize="12dp" />
 
             </LinearLayout>
 
