--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -126,6 +126,9 @@
         android:ems="10"
         android:hint="이름"
         android:inputType="text"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:text="이미지"
         app:layout_constraintEnd_toEndOf="@+id/etAPEUserId"
         app:layout_constraintStart_toStartOf="@+id/etAPEUserId"
         app:layout_constraintTop_toBottomOf="@+id/textView60" />
@@ -146,6 +149,8 @@
         android:ems="10"
         android:hint="전화번호"
         android:inputType="text"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         app:layout_constraintEnd_toEndOf="@+id/etAPEUserName"
         app:layout_constraintStart_toStartOf="@+id/textView100"
         app:layout_constraintTop_toBottomOf="@+id/textView100" />
@@ -166,6 +171,8 @@
         android:ems="10"
         android:hint="주소"
         android:inputType="text"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         app:layout_constraintEnd_toEndOf="@+id/etAPEUserPhone"
         app:layout_constraintStart_toStartOf="@+id/textView59"
         app:layout_constraintTop_toBottomOf="@+id/textView101" />
@@ -178,6 +185,8 @@
         android:ems="10"
         android:hint="상세주소"
         android:inputType="text"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         app:layout_constraintEnd_toEndOf="@+id/etAPEUserAddress1"
         app:layout_constraintStart_toStartOf="@+id/etAPEUserAddress1"
         app:layout_constraintTop_toBottomOf="@+id/etAPEUserAddress1" />
