ver1.97 수정사항 1. 댓글 r_check_level이 1,10,2,3,4,...으로 정렬되는 문제가 있어서 구조를 그냥 숫자가 아니라 대댓글메커니즘으로 완전변경 2. 대댓글 작성후 대댓글 입력창 자동으로 닫히게 변경

--- a/app/src/main/res/layout/list_reply_item.xml
+++ b/app/src/main/res/layout/list_reply_item.xml
@@ -120,7 +120,7 @@
                 android:background="#00ff0000"
                 android:minWidth="0dp"
                 android:minHeight="0dp"
-                android:text="답글달기"
+                android:text="댓글달기"
                 android:textColor="#000000"
                 android:textSize="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
