ver1.97 수정사항 1. Comment bean에서 댓글 삭제를 위한 부분 추가(삭제여부, 댓글이 위치한 글 번호) 2. CommentAdapter에서 댓글 삭제 버튼이 댓글을 작성한 사람과 로그인한 사람이 같을대만 나타나게 하는 부분 추가 3. CommentAdapter에서 댓글레벨이 일정수준에 이르면 댓글작성을 막는 부분을 추가후 주석처리 4. CommunitycommentActivity에서 댓글작성시 데이터베이스에 댓글이 위치한 글번호를 추가적으로 저장하게 수정

--- a/app/src/main/res/layout/list_reply_item.xml
+++ b/app/src/main/res/layout/list_reply_item.xml
@@ -126,6 +126,19 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnLRIDelete"
+                android:layout_width="60dp"
+                android:layout_height="30dp"
+                android:text="댓글삭제"
+                android:textSize="8dp"
+                android:textStyle="bold"
+                android:visibility="visible"
+                app:layout_constraintBottom_toTopOf="@+id/tvLRICommentWrite"
+                app:layout_constraintEnd_toEndOf="@+id/tvLRICommentWrite"
+                app:layout_constraintStart_toStartOf="@+id/tvLRICommentWrite"
+                app:layout_constraintTop_toTopOf="parent" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
