--- a/app/src/main/res/layout/list_reply_item.xml
+++ b/app/src/main/res/layout/list_reply_item.xml
@@ -15,7 +15,7 @@
             android:id="@+id/tvLRIMargineText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#00ff0000"
+            android:textColor="#00FF0000"
             android:textSize="30dp" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -91,7 +91,7 @@
 
                 <TextView
                     android:id="@+id/tvLRIContent"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="댓글내용"
                     android:textSize="14dp" />
@@ -133,7 +133,7 @@
                 android:text="댓글삭제"
                 android:textSize="8dp"
                 android:textStyle="bold"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@+id/tvLRICommentWrite"
                 app:layout_constraintEnd_toEndOf="@+id/tvLRICommentWrite"
                 app:layout_constraintStart_toStartOf="@+id/tvLRICommentWrite"
