--- a/app/src/main/res/layout/activity_community_comment.xml
+++ b/app/src/main/res/layout/activity_community_comment.xml
@@ -44,7 +44,6 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="10dp"
-        android:text="TextView"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +68,7 @@
         android:background="@drawable/drawable_register_round_button"
         android:ems="10"
         android:hint="댓글을 남겨보세요"
-        android:inputType="text"
+        android:inputType="text|textMultiLine"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:textAlignment="center"
