--- a/app/src/main/res/layout/list_reply_item.xml
+++ b/app/src/main/res/layout/list_reply_item.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
@@ -22,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:padding="5dp">
 
             <androidx.cardview.widget.CardView
@@ -51,6 +52,7 @@
                 android:layout_marginStart="20dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/cvAPECardView"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -113,18 +115,15 @@
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/tvLRICommentWrite"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:background="#00ff0000"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                android:text="댓글달기"
-                android:textColor="#000000"
-                android:textSize="12dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnLRIDelete"
@@ -139,8 +138,21 @@
                 app:layout_constraintStart_toStartOf="@+id/tvLRICommentWrite"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/tvLRICommentWrite"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="#00ff0000"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                android:text="댓글달기"
+                android:textColor="#000000"
+                android:textSize="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+
     </LinearLayout>
 
     <View
@@ -166,7 +178,7 @@
             android:background="@drawable/drawable_register_round_button"
             android:ems="10"
             android:hint="댓글을 입력해주세요"
-            android:inputType="text"
+            android:inputType="text|textMultiLine"
             android:paddingLeft="20dp"
             android:paddingRight="40dp"
             android:textSize="14dp"
