ver1.99a 수정사항 1. 검색창으로 게시물 상세페이지에 들어갔을때 댓글 5개 보여주는 부분에 댓글달기와 댓글삭제부분을 출력하지 않게 변경 2. 글 수정페이지에서 메소드 기능과 이름이 서로 맞지 않아서 기능에 맞게 메소드 이름을 변경 3. 글 수정페이지에서 수정, 삭제 버튼을 직접 나오게 하지 않고 toolbar를 이용해서 옵션메뉴를 구현해 나오게 수정 4. photoAdapter에서 차후 변경할수도 있는 부분(수정/글쓰기)에서 구조변경을 하면 수정해야 할 부분 주석으로 추가

--- a/app/src/main/res/layout/list_main_item.xml
+++ b/app/src/main/res/layout/list_main_item.xml
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:text="가지"
             android:textAlignment="center"
-            android:textSize="16dp"
+            android:textSize="14dp"
             android:textStyle="bold" />
 
         <TextView
@@ -62,7 +62,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="test@test.com"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textSize="12dp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
